--- a/NOVA/Views/Uretim/Index.cshtml
+++ b/NOVA/Views/Uretim/Index.cshtml
@@ -1246,7 +1246,8 @@
             $("#divPartial").show();
         }
         $('.js-example-basic-single').select2({
-            tags: true
+            tags: true,
+            "language": "tr-TR"
         }
         );
         var uretimControl = '';
@@ -1256,6 +1257,8 @@
         function change(value) {
             if (value == 0) {
                 constant = 0;
+                KapatilacakIsEmirleri = [];
+                $('#isemirlerinikapatbtn').hide();
                 $("#label").html("Çıktı")
                 $("#tablo").show();
                 $("#scanner").hide();
@@ -1296,8 +1299,10 @@
             }
             else if (value == 1)
             {
+                KapatilacakIsEmirleri = [];
                 constant = 1;
                 $("#label").html("Girdi")
+                $('#isemirlerinikapatbtn').hide();
                 $("#tablo").hide();
                 $("#makmobile1").hide();
                 $("#makmobile2").hide();
@@ -1412,6 +1417,7 @@
             }
             else if(value == 2)
             {
+                KapatilacakIsEmirleri = [];
                 constant = 2;
                 MakineListele();
                 $("#tablo").hide();
@@ -1447,8 +1453,10 @@
                 }
             }
             else if (value == 3) {
+                KapatilacakIsEmirleri = [];
                 constant = 3;
                 UretimeGirenlerMakineListele();
+                $('#isemirlerinikapatbtn').hide();
                 $("#tablo").hide();
                 $("#makmobile1").hide();
                 $("#makmobile2").hide();
