--- a/NOVA/Views/IsEmri/IsEmriPartials/RehberPartial.cshtml
+++ b/NOVA/Views/IsEmri/IsEmriPartials/RehberPartial.cshtml
@@ -30,6 +30,7 @@
                         <th data-field="SERI_NO_3" data-halign="center" data-align="center" data-filter-control="input">Kalite</th>
                         <th data-halign="center" data-align="center" data-formatter="metFormatter">METRAJ</th>
                         <th data-field="MIKTAR" data-halign="center" data-align="center" data-formatter="formatterMiktar">AĞIRLIK</th>
+                        <th data-field="" data-halign="center" data-align="center" data-formatter="formatterIslem">İŞLEM</th>
                     </tr>
                 </thead>
             </table>
@@ -38,7 +39,11 @@
 
     </div>
 </div>
+
 <script>
+    function formatterIslem(value, index, row) {
+        return '<button class="btn btn-primary" type="button" onclick="rehberAktar(\''+index.SERI_NO+'\')">SEÇ</button>';
+    }
     function formatterUrun(value, index, row) {
         return '<span onclick="urunClick(this)">' + value + '</span>';
     }
