--- a/NOVA/Views/IsEmri/IsEmriPartials/RehberPartial.cshtml
+++ b/NOVA/Views/IsEmri/IsEmriPartials/RehberPartial.cshtml
@@ -2,8 +2,8 @@
 <div class="modal fade" id="rehberSec" data-bs-backdrop="static" data-bs-keyboard="false" aria-labelledby="SiparisModalLabel" aria-hidden="true">
 
     <div class="modal-dialog modal-sm modal-dialog-scrollable" style="max-width:90% !important">
-        <div class="modal-content p-1" style="overflow-y: auto !important;width:90% !important;margin-left:7% !important;margin-top:1% !important;margin-bottom:1% !important">
-            <div class="modal-header" style="background: white; position: sticky; top: 0;z-index:5">
+        <div class="modal-content p-1" style="overflow-y:auto !important;width:90% !important;margin-left:7% !important;margin-top:1% !important;margin-bottom:1% !important">
+            <div class="modal-header" style="background: white; position: sticky; top: -6px;z-index:5">
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close" onclick="ModalKapat()"></button>
             </div>
 
@@ -19,7 +19,7 @@
                    data-mobile-responsive="true"
                    data-url="http://192.168.2.13:83/api/seri/serirehber">
                 <thead>
-                    <tr id="thr">
+                    <tr>
                         <th data-field="SERI_NO" data-halign="center" data-align="center" data-formatter="formatterUrun" data-filter-control="input">Ürün Kodları</th>
                         <th data-field="STOK_KODU" data-halign="center" data-align="center" data-filter-control="input">STOK KODU</th>
                         <th data-field="STOK_ADI" data-halign="center" data-align="center" data-filter-control="input">STOK ADI</th>
@@ -45,7 +45,7 @@
         return '<button class="btn btn-primary" type="button" onclick="rehberAktar(\''+index.SERI_NO+'\')">SEÇ</button>';
     }
     function formatterUrun(value, index, row) {
-        return '<span onclick="urunClick(this)">' + value + '</span>';
+        return '<span>' + value + '</span>';
     }
     function formatterMiktar(value, index, row) {
         return parseInt(value).toLocaleString();
