--- a/NOVA/Views/IsEmri/IsEmri.cshtml
+++ b/NOVA/Views/IsEmri/IsEmri.cshtml
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <style>
+        
         input::-webkit-outer-spin-button,
         input::-webkit-inner-spin-button {
             -webkit-appearance: none;
@@ -114,6 +115,7 @@
             border-color: #4417FA;
             box-shadow: 0 2px 4px 0 rgba(105, 108, 255, 0.4);
         }
+        
     </style>
 </head>
 <body>
@@ -702,11 +704,9 @@
         function rehberAc() {
 
             $("#rehberSec").modal("show");
-            $("#urunler").bootstrapTable("destroy").bootstrapTable({
-                url: 'http://192.168.2.13:83/api/seri/serirehber'
-            })
+            $('#urunler').bootstrapTable("destroy").bootstrapTable()
 
-    }
+        }
     function rehberAktar(seri) {
         $("#seri").val(seri).trigger("input");
         $("#rehberSec").modal("hide");
@@ -987,7 +987,7 @@
                         if (l > 2) {
                             for (let a = 1; a < l; a++) {
                                 if (a == 1) {
-
+                                    MachineChange($("#BKTable").find("tr").eq(a).find("select").eq(0).val(),'BKTable') 
                                     $("#BKTable").find("tr").eq(a).find("select").eq(1).trigger("change");
                                 } else {
 
@@ -995,15 +995,17 @@
                                 }
                             }
                         } else {
-
+                            $("#BKTable").find("select").eq(0).trigger("change");
                             $("#BKTable").find("select").eq(1).trigger("change");
                         }
 
                         break;
                     case 'PB':
+                        $("#PBTable").find("select").eq(0).trigger("change");
                         $("#PBTable").find("select").eq(1).trigger("change");
                         break;
                     case 'RF':
+                        $("#RFTable").find("select").eq(0).trigger("change");
                         $("#RFTable").find("select").eq(1).trigger("change");
                         break;
                 }
@@ -3026,7 +3028,7 @@
                             MUSTERI: Musteri,
                             AGIRLIK: Math.round(Agirlik)
                         };
-
+                        OldStokAdi = $("#stokadi").val();
                         BKPivotVeri.push(Veri);
                         BKPivotToplamVeri.push(ToplamVeri);
 
@@ -3209,7 +3211,7 @@ $.ajax({
             MUSTERI: Musteri,
             AGIRLIK: Math.round(Agirlik)
         };
-
+            OldStokAdi = $("#stokadi").val();
             PBPivotVeri.push(Veri);
             PBPivotToplamVeri.push(ToplamVeri);
 
@@ -3387,7 +3389,7 @@ $.ajax({
                         MUSTERI: Musteri,
                         AGIRLIK: Math.round(Agirlik)
                     };
-
+                    OldStokAdi = $("#stokadi").val();
                     RFPivotVeri.push(Veri);
                     RFPivotToplamVeri.push(ToplamVeri);
 
